CB-16783 eliminate CVE-2022-22965 vulnerability
https://github.com/advisories/GHSA-36p3-wjmg-h94x

--- a/integration-test/build.gradle
+++ b/integration-test/build.gradle
@@ -180,6 +180,7 @@ dependencies {
     }
     because 'because there is no jar for 2.4.3 in maven central repo...'
   }
+  implementation group: 'com.fasterxml.jackson.core',    name: 'jackson-databind',               version: jacksonVersion
 
   runtimeOnly group: 'javax.xml.bind',                name: 'jaxb-api', version: '2.3.0'
 }
