--- a/mock-thunderhead/Dockerfile
+++ b/mock-thunderhead/Dockerfile
@@ -1,4 +1,4 @@
-FROM docker-private.infra.cloudera.com/cloudera_base/ubi8/cldr-openjdk-11-runtime:1.14-6.1666624577-02122022
+FROM docker-private.infra.cloudera.com/cloudera_base/ubi8/cldr-openjdk-11-runtime:1.14-10-fips-14122022
 MAINTAINER info@cloudera.com
 
 # REPO URL to download jar
